# DeskAssist

./: CMakeLists.txt  README.md
components/adc_manager/: adc_manager.c
components/adc_manager/include/: adc_manager.h
components/board/: CMakeLists.txt
components/board/include/: board.h
components/buttons/: CMakeLists.txt  buttons.c
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/fan_motor/: CMakeLists.txt  fan_motor.c
components/lamp/: CMakeLists.txt  lamp.c
components/level_indicator/: CMakeLists.txt  level_indicator.c
components/photoresistor/: photoresistor.c
components/photoresistor/include/: photoresistor.h
components/potentiometer/: CMakeLists.txt  potentiometer.c
components/temp_sensor/: CMakeLists.txt  temp_sensor.c
components/temp_sensor/include/: temp_sensor.h
components/vent/: CMakeLists.txt  vent.c
components/wifi_com/: CMakeLists.txt  wifi_com.c
components/wifi_com/include/: wifi_com.h
components/wifi_sta/: CMakeLists.txt  Kconfig  wifi_sta.c
components/wifi_sta/include/: wifi_sta.h
lib/sorting/: sorting.c
main/: main.c  rtos_setup.h
src/: CMakeLists.txt  board.h  display.c  display.h  level_indicator.c  level_indicator.h  main.c  potentiometer.c  potentiometer.h  rtos_setup.h
